--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="skype:profile_name?userinfo"><i class="fa fa-skype"></i> lucamoiana</a>
 		</p>
 		<h4>Connect:</h4>
-     	<p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="fa fa-linkedin fa-3x"></i></a></p>
+     	<p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="iconlinkedin fa-3x"></i></a></p>
         <p class="view"><a href="https://github.com/LucaMoiana"><i class="fa fa-github fa-3x"></i></a></p>      
         <p class="view"><a href="https://twitter.com/lucamoiana"><i class="icon-twitter fa-3x"></i></a></p>
         <p class="view"><a href="http://instagram.com/luca_moiana"><i class="fa fa-instagram fa-3x"></i></a></p>
