--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </p>
         <h4>Contacts:</h4>
         <p><a href="mailto:luca_moiana@hotmail.com?Subject=From%20GitHub" target="_top"><i class="fa fa-envelope"></i> luca_moiana@hotmail.com</a><br/>
-        <a href="skype:profile_name?userinfo"><i class="fa fa-skype"></i> lucamoiana</a>
+        <a href="skype:profile_name?userinfo"><i class="icon-skype"></i> lucamoiana</a>
 		</p>
 		<h4>Connect:</h4>
      	<p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="iconlinkedin fa-3x"></i></a></p>
