--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
           Playing with code.
         </p>
         <h4>Contacts:</h4>
-        <p><a href="mailto:luca_moiana@hotmail.com?Subject=From%20GitHub" target="_top"><i class="fa fa-envelope"></i> luca_moiana@hotmail.com</a><br/>
+        <p><a href="mailto:luca_moiana@hotmail.com?Subject=From%20GitHub" target="_top"><i class="icon-envelope"></i> luca_moiana@hotmail.com</a><br/>
         <a href="skype:profile_name?userinfo"><i class="icon-skype"></i> lucamoiana</a>
 		</p>
 		<h4>Connect:</h4>
-     	<p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="iconlinkedin fa-3x"></i></a></p>
-        <p class="view"><a href="https://github.com/LucaMoiana"><i class="fa fa-github fa-3x"></i></a></p>      
+     	<p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="icon-linkedin fa-3x"></i></a></p>
+        <p class="view"><a href="https://github.com/LucaMoiana"><i class="icon-github fa-3x"></i></a></p>      
         <p class="view"><a href="https://twitter.com/lucamoiana"><i class="icon-twitter fa-3x"></i></a></p>
-        <p class="view"><a href="http://instagram.com/luca_moiana"><i class="fa fa-instagram fa-3x"></i></a></p>
+        <p class="view"><a href="http://instagram.com/luca_moiana"><i class="icon-instagram fa-3x"></i></a></p>
         
         
 
