--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           Playing with code.
         </p>
         <h4>Contacts:</h4>
+        <i class="fa fa-camera-retro fa-lg"></i> fa-lg
         <p><a href="mailto:luca_moiana@hotmail.com?Subject=From%20GitHub" target="_top"><i class="icon-envelope"></i> luca_moiana@hotmail.com</a><br/>
         <a href="skype:profile_name?userinfo"><i class="icon-skype"></i> lucamoiana</a>
 		</p>
