--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="skype:profile_name?userinfo"><i class="icon-skype icon-larger"></i> lucamoiana</a>
 		</p>
 		<h4>Connect:</h4>
-     	<p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="icon-linkedin fa-4x"></i></a></p> <p class="view"><a href="https://github.com/LucaMoiana"><i class="icon-github fa-3x"></i></a></p> <p class="view"><a href="https://twitter.com/lucamoiana"><i class="icon-twitter fa-3x"></i></a></p> <p class="view"><a href="http://instagram.com/luca_moiana"><i class="icon-instagram fa-3x"></i></a></p>
+     	<p class="view"><a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="icon-linkedin icon-larger"></i></a></p> <p class="view"><a href="https://github.com/LucaMoiana"><i class="icon-github icon-larger"></i></a></p> <p class="view"><a href="https://twitter.com/lucamoiana"><i class="icon-twitter icon-larger"></i></a></p> <p class="view"><a href="http://instagram.com/luca_moiana"><i class="icon-instagram icon-larger"></i></a></p>
         
         
 
