--- a/stresa/index.html
+++ b/stresa/index.html
@@ -18,6 +18,7 @@
     <!--<script src="Leaflet.MakiMarkers.js"></script>-->
     <!-- JQuery -->
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+
     <!-- Added for omnivore -->
     <!-- <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.1.2/leaflet-omnivore.min.js'></script>-->
 
@@ -103,14 +104,22 @@
     });
     <!-- Create JSON Markers for start and  finish with popup -->
     
-    L.marker([45.884010493755341, 8.537027388811111]).addTo(map)
-        .bindPopup('PARTENZA')
-        .openPopup();
+    //L.marker([45.884010493755341, 8.537027388811111]).addTo(map)
+    //    .bindPopup('PARTENZA')
+    //    .openPopup();
 
-    L.marker([45.885521080344915, 8.536947425454855]).addTo(map)
-        .bindPopup('ARRIVO')
-        .openPopup();
- 
+    //L.marker([45.885521080344915, 8.536947425454855]).addTo(map)
+    //    .bindPopup('ARRIVO')
+    //    .openPopup();
+     var traguardo;
+    $.getJSON("data/traguardo.geojson", function(json) {
+        traguardo = L.geoJson(json,{
+            onEachFeature: function (feature, layer) {
+        layer.bindPopup(feature.properties.Name);  
+      }
+        }).addTo(map);
+    });
+
 
     
 
