--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -27,6 +28,7 @@
         <a href="skype:profile_name?userinfo"><i class="icon-skype icon-larger"></i> lucamoiana</a>
 		</p>
 		<h4>Connect:</h4>
+    <i class="fa fa-camera-retro fa-5x"></i> fa-5x
      	<p style="margin-right:60px;">
      	<a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="icon-linkedin icon-larger"></i></a>
      	<a href="https://github.com/LucaMoiana"><i class="icon-github icon-larger"></i></a>
