--- a/stresa/index.html
+++ b/stresa/index.html
@@ -103,22 +103,15 @@
 };
     var percorso;
     $.getJSON("data/stresa.geojson", function(json) {
-        percorso = L.geoJson(json,{
-    style: myStyle
-},
+        percorso = L.geoJson(json,
 {
             onEachFeature: el.addData.bind(el) //working on a better solution
-        }).addTo(map);
+        },{
+    style: myStyle
+},).addTo(map);
     });
     <!-- Create JSON Markers for start and  finish with popup -->
-    
-    //L.marker([45.884010493755341, 8.537027388811111]).addTo(map)
-    //    .bindPopup('PARTENZA')
-    //    .openPopup();
 
-    //L.marker([45.885521080344915, 8.536947425454855]).addTo(map)
-    //    .bindPopup('ARRIVO')
-    //    .openPopup();
      var traguardo;
     $.getJSON("data/traguardo.geojson", function(json) {
         traguardo = L.geoJson(json,{
