--- a/stresa/index.html
+++ b/stresa/index.html
@@ -108,7 +108,7 @@
             onEachFeature: el.addData.bind(el) //working on a better solution
         },{
     style: myStyle
-},).addTo(map);
+}).addTo(map);
     });
     <!-- Create JSON Markers for start and  finish with popup -->
 
