--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <li> <a href="http://lucamoiana.github.io/stresa/"><b>STRESA</b></a>: Map created using leafletjs, with Elevation profile, title, scalebar, markers and soon distance markers</li>
 
-<li> <b>UTLO-2015</b>: The goal is to create a leafletjs map for UTLO2015 with selection of 3 tracks, Elevation profile, title, scalebar, markers and distance markers</li>
+<li> <a href="http://lucamoiana.github.io/maggiore/"><b>MAGGIORE</b></a>: The goal is to create a leafletjs map for "Trail del Lago Maggiore" with selection of 2 tracks, Elevation profile, title, scalebar, markers and distance markers</li>
 
 <li> <b>Franciacorta</b>: The goal is to build a leafletjs map in Bootleaf with zoom to function and layers control for current and Historic Land Use (ON/OFF)</li>
 
