--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p>Things I’m working on:</p>
 
 <ol>
-<li> <a href="http://lucamoiana.github.io/MDR/5mdr.html"><b>V Maratona del Rugareto</b></a>: My very first web map, using Mapbox.js and based on <a href="https://www.mapbox.com/mapbox.js/example/v1.0.0/layers/">Toggling layers</a></li>
+<li> <a href="http://lucamoiana.github.io/MDR/index.html"><b>V Maratona del Rugareto</b></a>: My very first web map, using Mapbox.js and based on <a href="https://www.mapbox.com/mapbox.js/example/v1.0.0/layers/">Toggling layers</a></li>
 
 <li> <a href="http://lucamoiana.github.io/stresa/"><b>STRESA</b></a>: Map created using leafletjs, with Elevation profile, title, scalebar, markers and soon distance markers</li>
 
