--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <li> <b>PLIS</b>: The goal is to create a leafletjs map using web data imported with import.io, and create clusters for Provinces</li>
 
-<li> <b>MapTimeRome</b>: I'm thinking of starting a MapTime in Rome</li>
+<li> <a href="http://maptime.io/roma/"><b>MapTimeRome</b>: <del>I'm thinking of starting a</del> MapTime in Rome <b>DONE</b></li>
 </ol>
       </section>
       <footer>
