--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
 <li> <a href="http://lucamoiana.github.io/maggiore/"><b>MAGGIORE</b></a>: The goal is to create a leafletjs map for "Trail del Lago Maggiore" with selection of 2 tracks, Elevation profile, title, scalebar, markers and distance markers</li>
 
+<li> <a href="http://lucamoiana.github.io/valmorea/"><b>VALMOREA</b></a>: The goal is to create a leafletjs map for "22Km della Valle Olona" and put it in a Bootleaf page with some function</li>
+
 <li> <b>Franciacorta</b>: The goal is to build a leafletjs map in Bootleaf with zoom to function and layers control for current and Historic Land Use (ON/OFF)</li>
 
 <li> <b>PLIS</b>: The goal is to create a leafletjs map using web data imported with import.io, and create clusters for Provinces</li>
