--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 <p>Things I’m working on:</p>
 
 <ol>
+<li> <a href="http://lucamoiana.github.io/mdr2015/MdR2015_index.html"><b>VI Maratonina del Rugareto</b></a>: My new web map for the 2015 edition of the run. Based on bootstrap and leaflet</li>
+
 <li> <a href="http://lucamoiana.github.io/MDR/index.html"><b>V Maratona del Rugareto</b></a>: My very first web map, using Mapbox.js and based on <a href="https://www.mapbox.com/mapbox.js/example/v1.0.0/layers/">Toggling layers</a></li>
 
 <li> <a href="http://lucamoiana.github.io/stresa/"><b>STRESA</b></a>: Map created using leafletjs, with Elevation profile, title, scalebar, markers and soon distance markers</li>
