--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <p>Things I’m working on:</p>
 
 <ol>
-<li> <a href="http://lucamoiana.github.io/mdr2015/MdR2015_index.html"><b>VI Maratonina del Rugareto</b></a>: My new web map for the 2015 edition of the run. Based on bootstrap and leaflet</li>
+<li> <a href="http://lucamoiana.github.io/mdr2015/MdR2015_index.html"><b>VI Maratonina del Rugareto</b></a>: New web map for the 2015 edition of the Maratonina del Rugareto. Leaflet on Bootstrap, with some jquery and deep CSS edit</li>
 
 <li> <a href="http://lucamoiana.github.io/MDR/index.html"><b>V Maratona del Rugareto</b></a>: My very first web map, using Mapbox.js and based on <a href="https://www.mapbox.com/mapbox.js/example/v1.0.0/layers/">Toggling layers</a></li>
 
