--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</p>
 		<h4>Connect:</h4>
      	<p style="margin-right:200px;">
-     	<a href="it.linkedin.com/pub/luca-moiana/3/266/592/"><i class="icon-linkedin icon-larger"></i></a>
+     	<a href="https://www.linkedin.com/pub/luca-moiana/3/266/592"><i class="icon-linkedin icon-larger"></i></a>
      	<a href="https://github.com/LucaMoiana"><i class="icon-github icon-larger"></i></a>
      	<a href="https://twitter.com/lucamoiana"><i class="icon-twitter icon-larger"></i></a>
      	<a href="http://instagram.com/luca_moiana"><i class="icon-instagram icon-larger"></i></a>
