--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Lucamoiana.github.io by LucaMoiana</title>
+    <title>LucaMoiana</title>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,6 +30,7 @@
     <div class="wrapper">
       <header>
         <h1>Luca Moiana</h1>
+        <h3>I have GIS skills, how can I help?</h3>
         <p>Environment specialist, GIS expert<br/>
           Playing with code.
         </p>
@@ -46,10 +47,9 @@
      	</p>
         </header>
       <section>
-        <h1>
-<a name="lucamoianagithubio" class="anchor" href="#lucamoianagithubio"><span class="octicon octicon-link"></span></a>MY PROJECTS</h1>
+        <h2>
+<a name="lucamoianagithubio" class="anchor" href="#lucamoianagithubio"><span class="octicon octicon-link"></span></a>MY PROJECTS</h2>
 
-<p>Things I’m working on:</p>
 
 <ol>
 <li> <a href="http://lucamoiana.github.io/mdr2015/MdR2015_index.html"><b>VI Maratonina del Rugareto</b></a>: New web map for the 2015 edition of the Maratonina del Rugareto. Leaflet on Bootstrap, with some jquery and deep CSS edit</li>
@@ -74,6 +74,6 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
