--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
      	<a href="https://github.com/LucaMoiana"><i class="icon-github icon-larger"></i></a>
      	<a href="https://twitter.com/lucamoiana"><i class="icon-twitter icon-larger"></i></a>
      	<a href="http://instagram.com/luca_moiana"><i class="icon-instagram icon-larger"></i></a>
+     	<a href="https://medium.com/@lucamoiana"><i class="icon-medium icon-larger"></i></a>
      	</p>
         </header>
       <section>
