--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
 
 <ol>
+<li> <a href="http://lucamoiana.github.io/BdR/BdR_index.html"><b>Sentieri del Rugareto</b></a>: A webmap of trails from my favorite park (leaflet, bootstrap)</li>
+
 <li> <a href="http://lucamoiana.github.io/mdr2015/MdR2015_index.html"><b>VI Maratonina del Rugareto</b></a>: New web map for the 2015 edition of the Maratonina del Rugareto. Leaflet on Bootstrap, with some jquery and deep CSS edit</li>
 
 <li> <a href="http://lucamoiana.github.io/MDR/index.html"><b>V Maratona del Rugareto</b></a>: My very first web map, using Mapbox.js and based on <a href="https://www.mapbox.com/mapbox.js/example/v1.0.0/layers/">Toggling layers</a></li>
