--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 		<h4>Connect:</h4>
      	<p style="margin-right:200px;">
      	<a href="https://www.linkedin.com/pub/luca-moiana/3/266/592"><i class="icon-linkedin icon-larger"></i></a>
-     	<a href="https://github.com/LucaMoiana"><i class="icon-github icon-larger"></i></a>
-     	<a href="https://twitter.com/lucamoiana"><i class="icon-twitter icon-larger"></i></a>
-     	<a href="http://instagram.com/luca_moiana"><i class="icon-instagram icon-large"></i></a>
-     	<a href="https://medium.com/@lucamoiana"><i class="fa fa-medium"></i></a>
+     	<a href="https://github.com/LucaMoiana"><i class="icon-github fa-3x"></i></a>
+     	<a href="https://twitter.com/lucamoiana"><i class="icon-twitter fa-3x"></i></a>
+     	<a href="http://instagram.com/luca_moiana"><i class="icon-instagram fa-3x"></i></a>
+     	<a href="https://medium.com/@lucamoiana"><i class="icon-medium fa-3x"></i></a>
      	</p>
         </header>
       <section>
