--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <a href="skype:profile_name?userinfo"><i class="icon-skype icon-larger"></i> lucamoiana</a>
 		</p>
 		<h4>Connect:</h4>
-     	<p style="margin-right:200px;">
-     	<a href="https://www.linkedin.com/pub/luca-moiana/3/266/592"><i class="icon-linkedin icon-larger"></i></a>
-     	<a href="https://github.com/LucaMoiana"><i class="icon-github fa-3x"></i></a>
-     	<a href="https://twitter.com/lucamoiana"><i class="icon-twitter fa-3x"></i></a>
-     	<a href="http://instagram.com/luca_moiana"><i class="icon-instagram fa-3x"></i></a>
-     	<a href="https://medium.com/@lucamoiana"><i class="icon-medium fa-3x"></i></a>
+     	<p style="margin-right:50px;">
+     	<a href="https://www.linkedin.com/pub/luca-moiana/3/266/592"><i class="fa fa-linkedin fa-2x"></i></a>
+     	<a href="https://github.com/LucaMoiana"><i class="fa fa-github fa-2x"></i></a>
+     	<a href="https://twitter.com/lucamoiana"><i class="fa fa-twitter fa-2x"></i></a>
+     	<a href="http://instagram.com/luca_moiana"><i class="fa fa-instagram fa-2x"></i></a>
+     	<a href="https://medium.com/@lucamoiana"><i class="fa fa-medium fa-2x"></i></a>
      	</p>
         </header>
       <section>
