--- a/index.html
+++ b/index.html
@@ -62,14 +62,18 @@
             <h1 id="about-me">Luca Moiana</h1>
             </header>
             <div class="article-content">
-                <div itemscope itemtype="http://schema.org/Person"><p>My name
-        is <span itemprop="name">Luca Moiana</span>.
-       I am <a href="https://github.com/LucaMoiana/" title="My Github
-       profile" itemprop="url"><span itemprop="nickname">LucaMoiana</span></a> at Github and <a
-       href="https://twitter.com/lucamoiana/" title="My Twitter
-       profile" itemprop="url">@lucamoiana</a> at twitter. You can also reach me via <a
-       href="mailto:tluca_moiana@hotmail.com" title="My email
-       address" itemprop="email">email</a>.</p><p>English is my second language</p></div>
+                Environment specialist, GIS expert, and coder.<br>
+        <hr>
+            <a href="http://twitter.com/lucamoiana" title="@lucamoiana on Twitter" class="sidebar-social-links" target="_blank">
+            <i class="fa fa-twitter sidebar-social-links"></i></a>
+            <a href="http://github.com/LucaMoiana" title="LucaMoiana on Github" class="sidebar-social-links" target="_blank">
+            <i class="fa fa-github sidebar-social-links"></i></a>
+            <a href="https://it.linkedin.com/pub/luca-moiana/3/266/592" title="Luca Moiana on Linkedin" class="sidebar-social-links" target="_blank">
+            <i class="fa fa-linkedin sidebar-social-links"></i></a>
+            <a href="mailto:luca_moiana@hotmail.com" title="Email: luca_moiana@hotmail.com" class="sidebar-social-links" target="_blank">
+            <i class="fa fa-envelope sidebar-social-links"></i></a>
+            <a href="href=&#34;skype:lucamoiana?call&#34;" title="lucamoiana on Skype" class="sidebar-social-links" target="_blank">
+            <i class="fa fa-skype sidebar-social-links"></i></a>
             </div>
         </div>
 
