second pelican version
sistemato un po di cose

--- a/authors.html
+++ b/authors.html
@@ -7,9 +7,11 @@
         <meta name="author" content="Luca Moiana" />
         <meta name="copyright" content="Luca Moiana" />
 
+        <meta name="description" content="I am Luca Moiana a GIS expert that created this page to practice with code, python and javascript, and show my masterpieces" />
+        <meta name="twitter:creator" content="@lucamoiana">
         <meta property="og:type" content="article" />
         <meta name="twitter:card" content="summary">
-        <title>my projects - Authors</title>
+        <title>need GIS? - Authors</title>
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/theme/css/pygments.css" media="screen">
@@ -18,33 +20,32 @@
         <link rel="stylesheet" type="text/css" href="/theme/css/custom.css" media="screen">
     </head>
     <body>
-        <div id="content-sans-footer">
-          <div class="navbar navbar-static-top">
-              <div class="navbar-inner">
-                  <div class="container-fluid">
-                      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                      </a>
-                      <a class="navbar-brand" href="/"><span class=site-name>my projects</span></a>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav pull-right top-menu">
-                            <li ><a href="">Home</a></li>
-                            <li ><a href="/categories.html">Categories</a></li>
-                            <li ><a href="/tags.html">Tags</a></li>
-                            <li ><a href="/archives.html">Archives</a></li>
-                            <li><form class="navbar-search" action="/search.html" onsubmit="return validateForm(this.elements['q'].value);"> <input type="text" class="search-query" placeholder="Search" name="q" id="tipue_search_input"></form></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">need GIS?</a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li ><a href="">Home</a></li>
+              <li ><a href="/categories.html">Categories</a></li>
+              <li ><a href="/tags.html">Tags</a></li>
+              <li ><a href="/archives.html">Archives</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
+      </nav>
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span1"></div>
                 <div class="span10">
-    <h1>Authors on my projects</h1>
+    <h1>Authors on need GIS?</h1>
 
     <ul>        <li><a href="/author/luca-moiana.html">Luca Moiana</a> (3)</li>
     </ul>
@@ -53,7 +54,7 @@
             </div>
         </div>
         <div id="push"></div>
-    </div>
+
 <footer>
 <div id="footer">
     <ul class="footer-content">
