removed github.io from url

--- a/authors.html
+++ b/authors.html
@@ -14,10 +14,10 @@
         <title>need GIS? - Authors</title>
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="localhost:8000/theme/css/pygments.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="localhost:8000/theme/tipuesearch/tipuesearch.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="localhost:8000/theme/css/elegant.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="localhost:8000/theme/css/custom.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="/theme/css/pygments.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="/theme/tipuesearch/tipuesearch.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="/theme/css/elegant.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="/theme/css/custom.css" media="screen">
     </head>
     <body>
       <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -29,14 +29,14 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="localhost:8000/">need GIS?</a>
+            <a class="navbar-brand" href="/">need GIS?</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li ><a href="localhost:8000">Home</a></li>
-              <li ><a href="localhost:8000/categories.html">Categories</a></li>
-              <li ><a href="localhost:8000/tags.html">Tags</a></li>
-              <li ><a href="localhost:8000/archives.html">Archives</a></li>
+              <li ><a href="">Home</a></li>
+              <li ><a href="/categories.html">Categories</a></li>
+              <li ><a href="/tags.html">Tags</a></li>
+              <li ><a href="/archives.html">Archives</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -47,7 +47,7 @@
                 <div class="span10">
     <h1>Authors on need GIS?</h1>
 
-    <ul>        <li><a href="localhost:8000/author/luca-moiana.html">Luca Moiana</a> (3)</li>
+    <ul>        <li><a href="/author/luca-moiana.html">Luca Moiana</a> (3)</li>
     </ul>
                 </div>
                 <div class="span1"></div>
