--- a/amici-intelligenti.html
+++ b/amici-intelligenti.html
@@ -97,6 +97,14 @@ Dicembre....2011</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/cest-la-vie-on-doit-se-defender.html" title="Previous: C&#39;est la vie, on doit se defender...">C'est la vie, on doit se defender...</a></li>
+                <li class="next-article"><a href="/potevo-mappare-noccioline.html" title="Next: Potevo mappare noccioline...">Potevo mappare noccioline...</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
