--- a/carramba-che-sorpresa.html
+++ b/carramba-che-sorpresa.html
@@ -131,6 +131,14 @@ I'm thumbing my way back to heaven...</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/lascia-o-raddoppia.html" title="Previous: Lascia o raddoppia?">Lascia o raddoppia?</a></li>
+                <li class="next-article"><a href="/forse-non-tutti-sanno-che.html" title="Next: Forse non tutti sanno che...">Forse non tutti sanno che...</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
