--- a/centri-commerciali-sudafricani.html
+++ b/centri-commerciali-sudafricani.html
@@ -100,6 +100,14 @@ tranne me.</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/4.html" title="Previous: Programmi per l&#39;Estate">Programmi per l'Estate</a></li>
+                <li class="next-article"><a href="/centri-commerciali-2.html" title="Next: Centri commerciali 2">Centri commerciali 2</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
