--- a/dag-alne-gher.html
+++ b/dag-alne-gher.html
@@ -109,6 +109,14 @@ sentiamo vi saluto</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/localized.html" title="Previous: Localized">Localized</a></li>
+                <li class="next-article"><a href="/mr-moiana.html" title="Next: Mr. MOIANA">Mr. MOIANA</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
