--- a/domande-esistenziali.html
+++ b/domande-esistenziali.html
@@ -94,6 +94,14 @@ giorno.</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/dove-siete.html" title="Previous: Dove siete?">Dove siete?</a></li>
+                <li class="next-article"><a href="/autoritratto-con-doccia.html" title="Next: Autoritratto con doccia">Autoritratto con doccia</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
