--- a/forse-non-tutti-sanno-che.html
+++ b/forse-non-tutti-sanno-che.html
@@ -102,6 +102,14 @@ Not what was said.."</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/carramba-che-sorpresa.html" title="Previous: CARRAMBA CHE SORPRESA">CARRAMBA CHE SORPRESA</a></li>
+                <li class="next-article"><a href="/puntini-sulle-i.html" title="Next: Puntini sulle i">Puntini sulle i</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
