--- a/fuori-dalla-savanaprima-della-jungla.html
+++ b/fuori-dalla-savanaprima-della-jungla.html
@@ -104,6 +104,14 @@ quello che non serve ed e' gia' pronta :-)))</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/mr-moiana.html" title="Previous: Mr. MOIANA">Mr. MOIANA</a></li>
+                <li class="next-article"><a href="/vedo-nero.html" title="Next: No title [vedo-nero]">No title [vedo-nero]</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
