--- a/lascia-o-raddoppia.html
+++ b/lascia-o-raddoppia.html
@@ -92,6 +92,14 @@ li</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/precisazioni.html" title="Previous: Precisazioni">Precisazioni</a></li>
+                <li class="next-article"><a href="/carramba-che-sorpresa.html" title="Next: CARRAMBA CHE SORPRESA">CARRAMBA CHE SORPRESA</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
