--- a/lavatrice.html
+++ b/lavatrice.html
@@ -106,6 +106,14 @@ perche' ci si trova in un paese straniero e so un po' scuretti.</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/centri-commerciali-2.html" title="Previous: Centri commerciali 2">Centri commerciali 2</a></li>
+                <li class="next-article"><a href="/buon-capodanno.html" title="Next: BUON CAPODANNO">BUON CAPODANNO</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
