--- a/massimo-rispetto.html
+++ b/massimo-rispetto.html
@@ -84,6 +84,14 @@ CIADIANA!!!</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/autoritratto-con-doccia.html" title="Previous: Autoritratto con doccia">Autoritratto con doccia</a></li>
+                <li class="next-article"><a href="/rockstar-life.html" title="Next: Rockstar Life!">Rockstar Life!</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
