--- a/mr-moiana.html
+++ b/mr-moiana.html
@@ -85,6 +85,14 @@ veramente la mia :-)))</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/dag-alne-gher.html" title="Previous: Dag alne gher">Dag alne gher</a></li>
+                <li class="next-article"><a href="/fuori-dalla-savanaprima-della-jungla.html" title="Next: Fuori dalla Savana...prima della Jungla">Fuori dalla Savana...prima della Jungla</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
