--- a/orecchiette-alle-cime-di-rapa.html
+++ b/orecchiette-alle-cime-di-rapa.html
@@ -87,6 +87,14 @@ mica in Puglia!!!</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/ma-quale-tarzan.html" title="Previous: Ma quale Tarzan?">Ma quale Tarzan?</a></li>
+                <li class="next-article"><a href="/celtel.html" title="Next: Celtel">Celtel</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
