--- a/precisazioni.html
+++ b/precisazioni.html
@@ -86,6 +86,14 @@ migliore</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/tiramisou.html" title="Previous: Tiramisou">Tiramisou</a></li>
+                <li class="next-article"><a href="/lascia-o-raddoppia.html" title="Next: Lascia o raddoppia?">Lascia o raddoppia?</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
