--- a/pronti-partenza-viaaaaa.html
+++ b/pronti-partenza-viaaaaa.html
@@ -96,6 +96,14 @@ vado fiero?</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/vedo-nero.html" title="Previous: No title [vedo-nero]">No title [vedo-nero]</a></li>
+                <li class="next-article"><a href="/il-chad-in-5-ragioni.html" title="Next: Il Chad in 5 ragioni...">Il Chad in 5 ragioni...</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
