--- a/puntini-sulle-i.html
+++ b/puntini-sulle-i.html
@@ -94,6 +94,14 @@ vengo e prendere le scarpine per Federico Jr.</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/forse-non-tutti-sanno-che.html" title="Previous: Forse non tutti sanno che...">Forse non tutti sanno che...</a></li>
+                <li class="next-article"><a href="/le-foto-della-domenica.html" title="Next: Le foto della domenica">Le foto della domenica</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
