--- a/qgis-server-on-ec2.html
+++ b/qgis-server-on-ec2.html
@@ -171,6 +171,13 @@ sudo chown ubuntu:ubuntu /var/www/maps</blockquote>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/farewell.html" title="Previous: Farewell">Farewell</a></li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
