--- a/risposte-ai-lettori.html
+++ b/risposte-ai-lettori.html
@@ -98,6 +98,14 @@ fine settimana<span> </span>a tutti dal vostro Bat</span></p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/le-sudate-carte.html" title="Previous: Le sudate carte">Le sudate carte</a></li>
+                <li class="next-article"><a href="/histories-for-cow-boys.html" title="Next: Histories for (COW) boys">Histories for (COW) boys</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
