--- a/tiramisou.html
+++ b/tiramisou.html
@@ -113,6 +113,14 @@ sciogliera' il dolve in men che non si dica....  </p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/histories-for-cow-boys.html" title="Previous: Histories for (COW) boys">Histories for (COW) boys</a></li>
+                <li class="next-article"><a href="/precisazioni.html" title="Next: Precisazioni">Precisazioni</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
