--- a/8-34-0016-16-050.html
+++ b/8-34-0016-16-050.html
@@ -115,6 +115,14 @@ sarebbero la stessa persona.</span></p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/il-chad-in-5-ragioni.html" title="Previous: Il Chad in 5 ragioni...">Il Chad in 5 ragioni...</a></li>
+                <li class="next-article"><a href="/soleil.html" title="Next: Soleil">Soleil</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
