--- a/aggiornamenti.html
+++ b/aggiornamenti.html
@@ -117,6 +117,14 @@ lo spettacolo d'arte varia di uno innamorato di te,."</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/benventuo-federico-jr.html" title="Previous: BENVENTUO FEDERICO JR.!!!">BENVENTUO FEDERICO JR.!!!</a></li>
+                <li class="next-article"><a href="/automazione.html" title="Next: Automazione">Automazione</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
