--- a/automazione.html
+++ b/automazione.html
@@ -97,6 +97,14 @@ manovalanza a basso costo....</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/aggiornamenti.html" title="Previous: Aggiornamenti">Aggiornamenti</a></li>
+                <li class="next-article"><a href="/ma-quale-tarzan.html" title="Next: Ma quale Tarzan?">Ma quale Tarzan?</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
