--- a/autoritratto-con-doccia.html
+++ b/autoritratto-con-doccia.html
@@ -83,6 +83,14 @@ doccia" src="http://farm2.static.flickr.com/1148/1068314183_2aca2bc54a_o.jpg" />
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/domande-esistenziali.html" title="Previous: Domande esistenziali">Domande esistenziali</a></li>
+                <li class="next-article"><a href="/massimo-rispetto.html" title="Next: MASSIMO RISPETTO">MASSIMO RISPETTO</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
