--- a/bat-au-tchad.html
+++ b/bat-au-tchad.html
@@ -182,6 +182,14 @@ pezzo.</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/un-tranquillo-week-end-di-paura.html" title="Previous: Un tranquillo week end di paura">Un tranquillo week end di paura</a></li>
+                <li class="next-article"><a href="/benventuo-federico-jr.html" title="Next: BENVENTUO FEDERICO JR.!!!">BENVENTUO FEDERICO JR.!!!</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
