--- a/benventuo-federico-jr.html
+++ b/benventuo-federico-jr.html
@@ -88,6 +88,14 @@ non era il nostro turno!</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/bat-au-tchad.html" title="Previous: &#34;Bat au Tchad&#34;">"Bat au Tchad"</a></li>
+                <li class="next-article"><a href="/aggiornamenti.html" title="Next: Aggiornamenti">Aggiornamenti</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
