--- a/buon-capodanno.html
+++ b/buon-capodanno.html
@@ -95,6 +95,14 @@ australiani...</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/lavatrice.html" title="Previous: Lavatrice">Lavatrice</a></li>
+                <li class="next-article"><a href="/localized.html" title="Next: Localized">Localized</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
