--- a/buona-domenica.html
+++ b/buona-domenica.html
@@ -103,6 +103,14 @@ progetto e chi piu' ne ha piu' ne metta!</span></p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/la-posta-del-bat.html" title="Previous: La Posta del bat">La Posta del bat</a></li>
+                <li class="next-article"><a href="/giovane-esploratore-tobia.html" title="Next: Giovane esploratore Tobia...">Giovane esploratore Tobia...</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
