--- a/celtel.html
+++ b/celtel.html
@@ -88,6 +88,14 @@ caricabatterie.</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/orecchiette-alle-cime-di-rapa.html" title="Previous: Orecchiette alle cime di rapa">Orecchiette alle cime di rapa</a></li>
+                <li class="next-article"><a href="/le-sudate-carte.html" title="Next: Le sudate carte">Le sudate carte</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
