--- a/centri-commerciali-2.html
+++ b/centri-commerciali-2.html
@@ -103,6 +103,14 @@ europea??? vi faro' sapere</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/centri-commerciali-sudafricani.html" title="Previous: Centri commerciali Sudafricani">Centri commerciali Sudafricani</a></li>
+                <li class="next-article"><a href="/lavatrice.html" title="Next: Lavatrice">Lavatrice</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
