--- a/cest-la-vie-on-doit-se-defender.html
+++ b/cest-la-vie-on-doit-se-defender.html
@@ -101,6 +101,14 @@ richiesta e io ve lo invio</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/giovane-esploratore-tobia.html" title="Previous: Giovane esploratore Tobia...">Giovane esploratore Tobia...</a></li>
+                <li class="next-article"><a href="/amici-intelligenti.html" title="Next: Amici intelligenti">Amici intelligenti</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
