--- a/codice-stradale.html
+++ b/codice-stradale.html
@@ -101,6 +101,14 @@ bambino che chideva l'elemosina attaccato alla portiera....o forse no..</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/destino-fatale.html" title="Previous: Destino fatale">Destino fatale</a></li>
+                <li class="next-article"><a href="/un-tranquillo-week-end-di-paura.html" title="Next: Un tranquillo week end di paura">Un tranquillo week end di paura</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
