--- a/destino-fatale.html
+++ b/destino-fatale.html
@@ -88,6 +88,14 @@ pessima</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/rockstar-life.html" title="Previous: Rockstar Life!">Rockstar Life!</a></li>
+                <li class="next-article"><a href="/codice-stradale.html" title="Next: Codice stradale">Codice stradale</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
