--- a/dove-siete.html
+++ b/dove-siete.html
@@ -97,6 +97,14 @@ lavorare.</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/potevo-mappare-noccioline.html" title="Previous: Potevo mappare noccioline...">Potevo mappare noccioline...</a></li>
+                <li class="next-article"><a href="/domande-esistenziali.html" title="Next: Domande esistenziali">Domande esistenziali</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
