--- a/farewell.html
+++ b/farewell.html
@@ -89,6 +89,14 @@ che ci ha in qualche modo trasformato. "</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/togliersi-i-sassolini-dalle-scarpe.html" title="Previous: Togliersi i sassolini dalle scarpe....">Togliersi i sassolini dalle scarpe....</a></li>
+                <li class="next-article"><a href="/qgis-server-on-ec2.html" title="Next: QGIS Server on EC2">QGIS Server on EC2</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
