--- a/giovane-esploratore-tobia.html
+++ b/giovane-esploratore-tobia.html
@@ -99,6 +99,14 @@ realmente esistenti e' puramente casuale)</span><span></span></p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/buona-domenica.html" title="Previous: Buona domenica!">Buona domenica!</a></li>
+                <li class="next-article"><a href="/cest-la-vie-on-doit-se-defender.html" title="Next: C&#39;est la vie, on doit se defender...">C'est la vie, on doit se defender...</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
