--- a/glossario-ciadiano.html
+++ b/glossario-ciadiano.html
@@ -103,6 +103,14 @@ aggiungo</span></p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/soleil.html" title="Previous: Soleil">Soleil</a></li>
+                <li class="next-article"><a href="/la-posta-del-bat.html" title="Next: La Posta del bat">La Posta del bat</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
