--- a/histories-for-cow-boys.html
+++ b/histories-for-cow-boys.html
@@ -124,6 +124,14 @@ musicali del Parente</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/risposte-ai-lettori.html" title="Previous: Risposte ai lettori">Risposte ai lettori</a></li>
+                <li class="next-article"><a href="/tiramisou.html" title="Next: Tiramisou">Tiramisou</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
