--- a/il-chad-in-5-ragioni.html
+++ b/il-chad-in-5-ragioni.html
@@ -139,6 +139,14 @@ style="font-family:Helvetica"><!--[if !supportEmptyParas]--> <!--[endif]--></sp
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/pronti-partenza-viaaaaa.html" title="Previous: Pronti, partenza VIAAAAA">Pronti, partenza VIAAAAA</a></li>
+                <li class="next-article"><a href="/8-34-0016-16-050.html" title="Next: +8 34&#39; 00,16 16 05&#39;0&#39;&#39;">+8 34' 00,16 16 05'0''</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
