--- a/la-posta-del-bat.html
+++ b/la-posta-del-bat.html
@@ -106,6 +106,14 @@ mi metto a raccontarti questo non vado a casa più...buona domenica</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/glossario-ciadiano.html" title="Previous: Glossario Ciadiano">Glossario Ciadiano</a></li>
+                <li class="next-article"><a href="/buona-domenica.html" title="Next: Buona domenica!">Buona domenica!</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
