--- a/le-foto-della-domenica.html
+++ b/le-foto-della-domenica.html
@@ -83,6 +83,14 @@
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/puntini-sulle-i.html" title="Previous: Puntini sulle i">Puntini sulle i</a></li>
+                <li class="next-article"><a href="/togliersi-i-sassolini-dalle-scarpe.html" title="Next: Togliersi i sassolini dalle scarpe....">Togliersi i sassolini dalle scarpe....</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
