--- a/le-sudate-carte.html
+++ b/le-sudate-carte.html
@@ -108,6 +108,14 @@ intelligenti</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/celtel.html" title="Previous: Celtel">Celtel</a></li>
+                <li class="next-article"><a href="/risposte-ai-lettori.html" title="Next: Risposte ai lettori">Risposte ai lettori</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
