--- a/localized.html
+++ b/localized.html
@@ -102,6 +102,14 @@ e'.....l'ho perso</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/buon-capodanno.html" title="Previous: BUON CAPODANNO">BUON CAPODANNO</a></li>
+                <li class="next-article"><a href="/dag-alne-gher.html" title="Next: Dag alne gher">Dag alne gher</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
