--- a/ma-quale-tarzan.html
+++ b/ma-quale-tarzan.html
@@ -107,6 +107,14 @@ tiene conto delle conseguenze e ha fatto il pieno al gruppo elettrogeno
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/automazione.html" title="Previous: Automazione">Automazione</a></li>
+                <li class="next-article"><a href="/orecchiette-alle-cime-di-rapa.html" title="Next: Orecchiette alle cime di rapa">Orecchiette alle cime di rapa</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
