--- a/potevo-mappare-noccioline.html
+++ b/potevo-mappare-noccioline.html
@@ -113,6 +113,14 @@ divertente e’ che hanno un vestito diverso, lasciano le spalle scoperte.</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/amici-intelligenti.html" title="Previous: Amici intelligenti">Amici intelligenti</a></li>
+                <li class="next-article"><a href="/dove-siete.html" title="Next: Dove siete?">Dove siete?</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
