--- a/rockstar-life.html
+++ b/rockstar-life.html
@@ -99,6 +99,14 @@ l'arrivo dell'elettricità o l'avvio del gruppo</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/massimo-rispetto.html" title="Previous: MASSIMO RISPETTO">MASSIMO RISPETTO</a></li>
+                <li class="next-article"><a href="/destino-fatale.html" title="Next: Destino fatale">Destino fatale</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
