--- a/soleil.html
+++ b/soleil.html
@@ -111,6 +111,14 @@ una low cost africana, sta per Nazioni Unite.</span></p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/8-34-0016-16-050.html" title="Previous: +8 34&#39; 00,16 16 05&#39;0&#39;&#39;">+8 34' 00,16 16 05'0''</a></li>
+                <li class="next-article"><a href="/glossario-ciadiano.html" title="Next: Glossario Ciadiano">Glossario Ciadiano</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
