--- a/togliersi-i-sassolini-dalle-scarpe.html
+++ b/togliersi-i-sassolini-dalle-scarpe.html
@@ -91,6 +91,14 @@ il saluto finale</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/le-foto-della-domenica.html" title="Previous: Le foto della domenica">Le foto della domenica</a></li>
+                <li class="next-article"><a href="/farewell.html" title="Next: Farewell">Farewell</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
