--- a/un-tranquillo-week-end-di-paura.html
+++ b/un-tranquillo-week-end-di-paura.html
@@ -119,6 +119,14 @@ Ciadiani...iniziamo bene</p>
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/codice-stradale.html" title="Previous: Codice stradale">Codice stradale</a></li>
+                <li class="next-article"><a href="/bat-au-tchad.html" title="Next: &#34;Bat au Tchad&#34;">"Bat au Tchad"</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
