--- a/vedo-nero.html
+++ b/vedo-nero.html
@@ -84,6 +84,14 @@ No colors anymore I want them to turn black....
             
             
             <hr/>
+            <aside>
+            <nav>
+            <ul class="articles-timeline">
+                <li class="previous-article">« <a href="/fuori-dalla-savanaprima-della-jungla.html" title="Previous: Fuori dalla Savana...prima della Jungla">Fuori dalla Savana...prima della Jungla</a></li>
+                <li class="next-article"><a href="/pronti-partenza-viaaaaa.html" title="Next: Pronti, partenza VIAAAAA">Pronti, partenza VIAAAAA</a> »</li>
+            </ul>
+            </nav>
+            </aside>
         </div>
         <section>
         <div class="span2" style="float:right;font-size:0.9em;">
