--- a/qgis-server-on-ec2.html
+++ b/qgis-server-on-ec2.html
@@ -175,6 +175,7 @@ sudo chown ubuntu:ubuntu /var/www/maps</blockquote>
             <nav>
             <ul class="articles-timeline">
                 <li class="previous-article">« <a href="/farewell.html" title="Previous: Farewell">Farewell</a></li>
+                <li class="next-article"><a href="/starting-my-next-project.html" title="Next: Starting my next project">Starting my next project</a> »</li>
             </ul>
             </nav>
             </aside>
