--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </ul>
             <ul class="list-all-articles">
                 <li>
-                <a href="http://lucamoiana.github.io/mdr2015/MdR2015_index.html" title="VI Maratonina del Rugareto">VI Maratonina del Rugareto</a> <span class="proj-desc">New web map for the 2015 edition of the Maratonina del Rugareto. Leaflet on Bootstrap, with some jquery and deep CSS edit</span>
+                <a href="http://lucamoiana.github.io/MDR/index.html" title="VII Maratonina del Rugareto">VII Maratonina del Rugareto</a> <span class="proj-desc">New web map for the 2015 edition of the Maratonina del Rugareto. Leaflet on Bootstrap, with some jquery and deep CSS edit</span>
                 </li>
             </ul>
             <ul class="list-all-articles">
